@@ -1,3 +1,7 @@
+2011-01-07  Leonardo Martins  <leonardo@cose.fee.unicamp.br>
+
+	* @io/private/hco_.m: Considerada eliminação das variáveis de volume final.
+
 2011-01-06  Leonardo Martins  <leonardo@cose.fee.unicamp.br>
 
 	* @problema/{problema,get,dump}.m:
